--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "jquery": "^3.2.1"
   }
