--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-connect": "^5.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
+    "gulp-rev-all": "^0.9.7",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "jquery": "^3.2.1"
   }
